--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.1",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
